# iso-flow

./: .env.example  .envrc  .gitignore  .tflintrc  CLAUDE.md  MVP_DEPLOYMENT_PLAN.md  README.md  _config.yml  codecov.yml  docker-compose.dev.yml  docker-compose.yml  pre-commit-unified.sh  start-frontend.sh  start-local.sh  test-integration.sh
.config/: nextest.toml
.github/: BRANCH_PROTECTION.md  labeler.yml  setup-labels.yml
.github/workflows/: README.md  auto-author-assign.yml  code-quality.yml  coverage-comment.yml  coverage.yml  database-migration.yml  deploy.yml  docs.yml  gh-pages.yml  main-coverage.yml  pages-root.yml  pr-analysis.yml  pr-automation.yml  pr-check.yml  pr-checks-original.yml  pr-checks.yml  rust-ci.yml  unified-ci.yml
airflow/: README.md  requirements.txt
airflow/dags/: nba_rss_scraper.py
backend/: .clippy.toml  .dockerignore  .env.aurora.example  .env.example  .gitignore  Cargo.toml  DAILY_LOG.md  DATABASE_SCHEMA.md  Dockerfile  Dockerfile.migrate  MVP_TASKS.md  Makefile  PROGRESS_SUMMARY.md  README.md  coverage-36814-1012037822410110189_0.profraw  coverage-36814-11159913043129095644_0.profraw  coverage-36814-12532725964012092608_0.profraw  coverage-36814-12856597079310637207_0.profraw  coverage-36814-13698971631100796055_0.profraw  coverage-36814-13928601568610339280_0.profraw  coverage-36814-1421715366392818574_0.profraw  coverage-36814-15347548213405522443_0.profraw  coverage-36814-17030852307746148552_0.profraw  coverage-36814-17395054799423790145_0.profraw  coverage-36814-17568849184168370746_0.profraw  coverage-36814-17681146371733299209_0.profraw  coverage-36814-1869431544956505876_0.profraw  coverage-36814-2088963371365709510_0.profraw  coverage-36814-2987054143285673134_0.profraw  coverage-36814-3494155417701101755_0.profraw  coverage-36814-5440627766374174063_0.profraw  coverage-36814-564961985674476730_0.profraw  coverage-36814-5676361333316179039_0.profraw  coverage-36814-5851850505619191940_0.profraw  coverage-36814-6616625752647700051_0.profraw  coverage-36814-8592345066674784452_0.profraw  coverage-36814-963246638924839743_0.profraw  coverage-36815-1012037822410110189_0.profraw  coverage-36815-10430584433705274205_0.profraw  coverage-36815-11159913043129095644_0.profraw  (+914 more)
backend/.cargo/: audit.toml  config.toml
backend/.sqlx/: query-79920c11ea2e7073c43a62da4a91c1435ad7a154bdb47514169ccfe9481dff30.json  query-8955eefaf95e4ffbea7d32636eb633ed4ea37368a310335f6743bbda83c1783c.json  query-ba01a77baec6270e2b9981813b324a23c4a172eca5413c70f204c25518a6f262.json  query-bc7a6b6d780fe3b44cfd4e5d9b167687d9ae8cc5afb65717cf94e6d599dcdd67.json
backend/coverage/: lcov.info  tarpaulin-report.html
backend/migrations/: 20240120000001_initial_schema.sql  20250721120000_create_teams.sql  20250721120001_create_trade_news.sql
backend/migrations_postgres/: 20250725000000_create_teams.sql  20250725000001_create_trade_news.sql  20250725000002_insert_teams_data.sql  20250729000003_fix_timestamp_types.sql  20250730000001_add_abbreviation_to_teams.sql  20250731000004_add_translation_columns.sql  20250801000001_fix_timestamp_types.sql
backend/scripts/: migrate_to_aurora.sh  setup-labels.sh  test-with-db.sh
backend/src/: graphql.rs  graphql_context.rs  lib.rs  lib_test.rs  main.rs  test_utils.rs
backend/src/db/: connection.rs  mod.rs  models.rs  repository.rs  simple_repository.rs
backend/src/scheduler/: mod.rs
backend/src/scraper/: mod.rs  models.rs  models_extended_test.rs  persistence.rs  persistence_trait.rs  persistence_trait_test.rs  rss_parser.rs
backend/src/services/: mod.rs  translation.rs
backend/src/utils/: mod.rs
backend/tests/: app_test.rs  database_test.rs  database_test.rs.bak  db_test.rs  graphql_conversion_test.rs  graphql_test.rs  health_check_test.rs  integration_test.rs  models_extended_test.rs  rss_parser_test.rs
backend/tests/common/: mod.rs
backend/tests/integration/: db_test.rs  persistence_test.rs
docs/: DEPLOYMENT_GUIDE.md  DEVELOPMENT_PLAN.md  LOCAL_DEVELOPMENT.md  MVP_TASKS.md  OIDC_SETUP.md  README.md  ci-optimization.md  index.html  production-deployment-strategy.md
docs/airflow/: README.md  dags.md  mwaa-setup.md
frontend/: COVERAGE_CHECK.md  LOCAL_SETUP.md  README.md  build.gradle.kts  deploy.sh  gradle.properties  gradlew  kotlin-prod.html  kotlin-test.html  package-lock.json  package.json  settings.gradle.kts  simple-test.html
frontend-nextjs-backup/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  test.html
terraform/: README.md  SETUP.md
(+85 files in other folders)
